--- a/src/Kafka/pom.xml
+++ b/src/Kafka/pom.xml
@@ -27,7 +27,7 @@
         <java.version>8</java.version>
         <slf4j-api.version>1.7.6</slf4j-api.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <gson.version>2.2.4</gson.version>
+        <gson.version>2.2.5</gson.version>
         <schemaRegistryUrl>http://localhost:8081</schemaRegistryUrl>
         <schemaRegistryBasicAuthUserInfo></schemaRegistryBasicAuthUserInfo>
         <schemaLocal>src/main/resources/avro/io/confluent/examples/clients/cloud/DataRecordAvro2a.avsc</schemaLocal>
@@ -113,6 +113,11 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.corundumstudio.socketio</groupId>
+            <artifactId>netty-socketio</artifactId>
+            <version>1.7.19</version>
         </dependency>
     </dependencies>
 
