--- a/stratviz-proxy/pom.xml
+++ b/stratviz-proxy/pom.xml
@@ -19,9 +19,35 @@
     <jacoco.unit-tests.limit.branch-ratio>0%</jacoco.unit-tests.limit.branch-ratio>
     <jacoco.unit-tests.limit.class-complexity>20</jacoco.unit-tests.limit.class-complexity>
     <jacoco.unit-tests.limit.method-complexity>5</jacoco.unit-tests.limit.method-complexity>
-  </properties>
+    <!-- ksqlDB client-api -->
+    <!-- Keep versions as properties to allow easy modification / DO WE REALLy NEED TO SET THE JAVA VERSION?-->
+    <java.version>8</java.version>
+    <ksqldb.version>7.1.1</ksqldb.version>
+    <!-- Maven properties for compilation -->
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+  </properties>
+  <repositories>
+      <repository>
+          <id>ksqlDB</id>
+          <name>ksqlDB</name>
+          <url>http://packages.confluent.io/maven/</url>
+      </repository>
+  </repositories>
+
+  <pluginRepositories>
+      <pluginRepository>
+          <id>ksqlDB</id>
+          <url>http://packages.confluent.io/maven/</url>
+      </pluginRepository>
+  </pluginRepositories>
   <dependencies>
+    <dependency>
+      <groupId>io.confluent.ksql</groupId>
+      <artifactId>ksqldb-api-client</artifactId>
+      <version>${ksqldb.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
