Implemented KSQL querying of the historical data

--- a/stratviz-proxy/pom.xml
+++ b/stratviz-proxy/pom.xml
@@ -96,6 +96,12 @@
       <artifactId>kafka-streams</artifactId>
       <version>3.2.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/io.confluent.ksql/ksqldb-common -->
+    <dependency>
+      <groupId>io.confluent.ksql</groupId>
+      <artifactId>ksqldb-common</artifactId>
+      <version>7.1.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
